# fisholino

./: .clangd  .gitignore  CMakeLists.txt  README.md  latebit.cfg  main.cpp
assets/audio/: bad.lbtune  confirm.lbsfx  confirm.lbtune  dash.lbsfx  dash.lbtune  death.lbtune  food.lbtune  groovy.lbmus  groovy.lbtune  swimback.lbtune
assets/sprites/: food.txt  waves.txt
docs/: index.data  index.html  index.js  index.wasm
include/SDL2/: SDL_config.h
sprites/: bubbles.txt  coral.txt  enemy.txt  player-dash.txt  player-idle.txt
src/: Bubbles.cpp  Coral.cpp  Enemy.cpp  EnemyFactory.cpp  Floor.cpp  Food.cpp  FoodFactory.cpp  GameOver.cpp  GameOverEvent.cpp  GameStart.cpp  GameStartEvent.cpp  HUD.cpp  Player.cpp  ScoreEvent.cpp  Wave.cpp  helpers.cpp  helpers.h  state.cpp  state.h
src/characters/: Enemy.cpp  EnemyFactory.cpp  Player.cpp  characters.h
src/events/: BootEvent.cpp  GameOverEvent.cpp  GameStartEvent.cpp  PlayerDeadEvent.cpp  ScoreEvent.cpp  ScoreUpdated.cpp  events.h
src/powerups/: Food.cpp  FoodFactory.cpp  powerups.h
src/props/: Bubbles.cpp  Coral.cpp  Floor.cpp  Wave.cpp  props.h
src/scenes/: CameraShake.cpp  Death.cpp  Game.cpp  GameOver.cpp  GameStart.cpp  Scene.h  SceneManager.cpp  Welcome.cpp  scenes.h
src/ui/: Fish.cpp  HUD.cpp  WelcomeText.cpp  ui.h
